Added github repo link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <input type="button" id='btn' class='submit' value="Run Function">
         </form>
     </div>
+    <footer id='footer'>
+        <a href="https://github.com/andreibtc84/FaC-Arrays"> 
+            <img src="GitHub-Mark-Light-120px-plus.png" alt="Github logo">
+        </a>
+    </footer>
     
     <script src="app.js"></script>
 </body>
